--- a/views/details.hbs
+++ b/views/details.hbs
@@ -41,9 +41,11 @@
                         </p>
                     </div>
                     {{#if isOwner}}
-                        <div class="d-flex justify-content-center">
-                            <a class="mt-3 btn btn-outline-warning text-dark"
-                                href="/facility/{{room._id}}/decorate-room">Edit Room Facilities</a>
+                        <div class="d-flex justify-content-center gap-2">
+                            <a class="mt-3 btn btn-outline-warning text-dark" href="/room/{{room._id}}/edit">Edit</a>
+                            <a class="mt-3 btn btn-outline-danger text-dark" href="/room/{{room._id}}/delete">Delete</a>
+                            <a class="mt-3 btn btn-outline-info text-dark"
+                                href="/facility/{{room._id}}/decorate-room">Modify Facilities</a>
                         </div>
                     {{/if}}
                 </div>
