--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -2,12 +2,13 @@
 <section id="contact" class="contact">
     <div class="container" data-aos="fade-up">
         <div class="section-title">
-            <h2>Create</h2>
-            <p>New Accommodation</p>
+            <h2>Edit</h2>
+            <p>Accommodation</p>
         </div>
         <div class="row mt-1">
             <div class="col-lg-10 col-sm-auto mt-2 mt-lg-0 m-auto d-flex">
-                <form action="/create" name="submitForm" method="post" class="create-form">
+                <form action="/room/{{room._id}}/edit" name="submitForm" method="post" class="create-form">
+                    <input type="hidden" value="{{room._id}}" name="_id" />
                     <div class="my-3">
                         {{#if error}}
                             {{#each error}}
@@ -19,13 +20,11 @@
                     <div class="row mt-3 mb-3 form-group">
                         <div class="input-group mb-1">
                             <label class="input-group-text col-md-2 col-lg-2 col-sm-auto" for="name">Name</label>
-                            <input type="text" name="name" class="form-control" id="name"
-                                placeholder="Accommodation Name" value="{{name}}" />
+                            <input type="text" name="name" class="form-control" id="name" value="{{room.name}}" />
                         </div>
                         <div class="input-group mt-1">
                             <label class="input-group-text col-md-2 col-lg-2 col-sm-auto" for="city">Location</label>
-                            <input type="text" class="form-control" name="city" id="city" value="{{city}}"
-                                placeholder="Accommodation address">
+                            <input type="text" class="form-control" name="city" id="city" value="{{room.city}}" />
                         </div>
                     </div>
 
@@ -33,30 +32,29 @@
                         <div class="input-group w-50">
                             <label class="input-group-text" for="price">Price</label>
                             <input type="number" name="price" class="form-control" id="price" min="0"
-                                title="Price per Night" step="0.10" required />
+                                title="Price per Night" step="0.10" value="{{room.price}}" />
                         </div>
                         <div class="input-group w-50">
                             <label class="input-group-text" for="beds">Beds</label>
                             <input type="number" class="form-control" name="beds" id="beds" title="Number of beds"
-                                min="1" max="5" value="{{beds}}" />
+                                value="{{room.beds}}" min="1" max="5" />
                         </div>
                     </div>
 
                     <div class="row mt-3 mb-3">
                         <div class="form-group">
                             <input type="text" class="form-control mb-2" name="imageUrl" id="imageUrl"
-                                placeholder="Cover Image Url" value="{{imageUrl}}" />
+                                value="{{room.imageUrl}}" required />
                             <input type="text" class="form-control mt-2" name="gallery" id="gallery"
-                                placeholder="Second Image Url" value="{{gallery}}" />
+                                value="{{room.gallery}}" />
                         </div>
                     </div>
 
                     <div class="form-group mt-3">
-                        <textarea class="form-control" name="description" rows="6"
-                            placeholder="Add an attractive description to your place...">{{description}}</textarea>
+                        <textarea class="form-control" name="description" rows="6">{{room.description}}</textarea>
                     </div>
 
-                    <div class="text-center"><button type="submit">Save</button></div>
+                    <div class="text-center"><button type="submit">Update</button></div>
                 </form>
             </div>
         </div>
